--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.24.0",
+    "react-hook-form": "^7.19.1",
     "react-router-dom": "^5.3.0"
   }
 }
